@@ -1,3 +1,8 @@
+20-Jul-2015 Laurent Duflot
+	* python: add scripts to validate production: running on all files,
+	look for duplicate events
+
+
 18-Jul-2015 Laurent Duflot
 	* FilterUpdateMerge.py, getMCInfo.py: skip samples with no cross-section available
 
